fix docker problem, add db backoff
